# sfkit

./: Cargo.toml  LICENSE  README.md
src/: auth.rs  completions.rs  config.rs  main.rs
