[package]
name = "sfkit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
reqwest = {version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = {version = "1.26.0", features = ["full"]}
