[package]
name = "sfkit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "env"] }
clap_complete = "4.1.4"
dirs = "4.0.0"
regex = "1.7.1"
reqwest = {version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = {version = "1.26.0", features = ["full"]}
