[package]
name = "sfkit"
version = "0.0.2"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.3.4", features = ["derive", "env"] }
clap_complete = "4.1.4"
dirs = "4.0.0"
regex = "1.7.1"
reqwest = {version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
# tokio = {version = "1.26.0", features = ["full"]}
